2011-06-06 14:40  paddockd

	* [r260] src/slimaudio/slimaudio.h: Could not select output device
	  at index 0 by name. Fixed.

2011-05-21 11:33  paddockd

	* [r259] ChangeLog, TODO, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Fixed default device indicator
	  when using find device by name.
	  Cleaned up -L device display code.
	  Increased version to 259.

2011-05-18 20:04  paddockd

	* [r258] src/slimaudio/slimaudio.c, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_output.c, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c, src/squeezeslave/squeezeslave.h:
	  Output device selection by name (-n/--name) added.

2011-05-18 18:57  paddockd

	* [r257] ChangeLog, wiki/SupportThread.wiki: Capture additional
	  support thread announcement changes.

2011-05-15 11:06  paddockd

	* [r255] ChangeLog, wiki/SlimProtocol.wiki, wiki/SqueezeSlave.wiki,
	  wiki/SupportThread.wiki: Capture support thread announcement and
	  squeezeslave wiki changes.

2011-05-14 15:25  paddockd

	* [r254] ChangeLog, TODO, scripts/buildall-lnx24,
	  scripts/buildall-lnx26, scripts/buildall-lnx26-armel,
	  scripts/buildall-osx, scripts/buildall-win32: 1.1-253 release
	  build script updates.

2011-04-30 20:38  paddockd

	* [r253] ChangeLog, TODO, src/squeezeslave/squeezeslave.c: Updated
	  ChangeLog.
	  Increased version to 253.

2011-04-30 20:35  paddockd

	* [r252] src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c:
	  Use default retry_connection of 5 seconds instead of aborting
	  with an error.
	  Increased version to 1.1-252.

2011-03-26 15:45  paddockd

	* [r251] ChangeLog, src/slimproto/slimproto.c,
	  src/slimproto/slimproto.h, src/squeezeslave/squeezeslave.c,
	  src/squeezeslave/squeezeslave.h: Added BYE! to slimprotocol API.
	  Send goodbye during squeezeslave shutdown.
	  Increased firmware release to 5.
	  Increased version to 251.

2011-03-14 12:39  paddockd

	* [r250] contrib/makefile.mingw32-ffmpeg-display,